--- a/Ala-Carte.css
+++ b/Ala-Carte.css
@@ -163,7 +163,7 @@
 .u-section-2 .u-text-2 {
   font-family: "Bebas Neue";
   font-size: 2.25rem;
-  margin: 55px 109px 0 87px;
+  margin: 55px 59px 0 90px;
 }
 
 .u-section-2 .u-text-3 {
@@ -183,7 +183,7 @@
 .u-section-2 .u-text-4 {
   font-family: "Bebas Neue";
   font-size: 2.25rem;
-  margin: 55px 109px 0 87px;
+  margin: 55px 59px 0 90px;
 }
 
 .u-section-2 .u-text-5 {
@@ -203,7 +203,7 @@
 .u-section-2 .u-text-6 {
   font-family: "Bebas Neue";
   font-size: 2.25rem;
-  margin: 55px 109px 0 87px;
+  margin: 55px 59px 0 90px;
 }
 
 .u-section-2 .u-text-7 {
@@ -375,19 +375,20 @@
   }
 
   .u-section-2 .u-container-layout-1 {
-    padding: 9px 4px;
+    padding: 0;
   }
 
   .u-section-2 .u-text-1 {
     font-size: 3.75rem;
     width: auto;
-    margin-top: 0;
-    margin-right: 6px;
-    margin-left: auto;
+    margin-top: 276px;
+    margin-right: 0;
+    margin-bottom: -83px;
   }
 
   .u-section-2 .u-list-1 {
-    margin-top: -134px;
+    margin-top: 103px;
+    margin-bottom: 30px;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -406,7 +407,7 @@
   }
 
   .u-section-2 .u-text-3 {
-    margin-top: 22px;
+    margin-top: 53px;
     margin-left: 29px;
   }
 
@@ -422,7 +423,7 @@
   }
 
   .u-section-2 .u-text-5 {
-    margin-top: 22px;
+    margin-top: 53px;
     margin-left: 29px;
   }
 
@@ -438,71 +439,72 @@
   }
 
   .u-section-2 .u-text-7 {
-    margin-top: 22px;
+    margin-top: 53px;
     margin-left: 29px;
   }
 } .u-section-3 {
   background-image: url("images/67434657_3423594.jpg");
-  background-position: 50% 0%;
+  background-position: 77.95% 0%;
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 772px;
+  min-height: 1099px;
 }
 
 .u-section-3 .u-group-1 {
-  width: 631px;
-  min-height: 628px;
+  width: 540px;
+  min-height: 989px;
   height: auto;
-  margin: 110px auto 60px 0;
+  margin: 110px auto 0 0;
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 30px;
+  padding: 0;
 }
 
 .u-section-3 .u-text-1 {
   font-family: "Bebas Neue";
-  font-size: 6rem;
+  font-size: 3.75rem;
   font-weight: 700;
-  margin: 31px 197px 0 0;
+  width: auto;
+  margin: 15px 0 0;
 }
 
 .u-section-3 .u-text-2 {
-  font-size: 2.25rem;
-  margin: 20px 7px 0 87px;
+  font-size: 1.5rem;
+  margin: 20px 0 0;
 }
 
 .u-section-3 .u-text-3 {
-  font-size: 2.25rem;
-  margin: 60px 0 0 94px;
+  margin: 15px 0 0;
+}
+
+.u-section-3 .u-text-4 {
+  margin: 15px -200px 0 0;
+}
+
+.u-section-3 .u-text-5 {
+  font-size: 1.125rem;
+  margin: 60px 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 662px;
+    min-height: 906px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 0;
     height: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 497px;
-  }
-
-  .u-section-3 .u-group-1 {
-    min-height: 457px;
-    margin-bottom: 40px;
+    min-height: 694px;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 4.5rem;
-    width: auto;
-    margin-right: 0;
   }
 
   .u-section-3 .u-text-2 {
@@ -512,62 +514,36 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 400px;
-  }
-
-  .u-section-3 .u-group-1 {
-    width: 540px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    min-height: 521px;
   }
 
   .u-section-3 .u-text-2 {
-    margin-right: 0;
-    margin-left: 43px;
+    font-size: 1.5rem;
   }
 
-  .u-section-3 .u-text-3 {
-    margin-left: 43px;
+  .u-section-3 .u-text-5 {
     font-size: 1rem;
   }
 }
 
 @media (max-width: 575px) {
-   .u-section-3 {
-    background-position: 77.95% 0%;
-  }
-
   .u-section-3 .u-sheet-1 {
-    min-height: 569px;
+    min-height: 1099px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 40px;
-    margin-bottom: 9px;
-    min-height: 520px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 3.75rem;
   }
 
-  .u-section-3 .u-text-2 {
-    font-size: 1.5rem;
-    width: auto;
-    margin-right: 20px;
-    margin-left: 11px;
+  .u-section-3 .u-text-4 {
+    margin-right: 0;
   }
 
-  .u-section-3 .u-text-3 {
-    width: auto;
-    margin-top: 29px;
-    margin-left: 16px;
-    margin-right: 16px;
+  .u-section-3 .u-text-5 {
+    font-size: 1.125rem;
   }
 }
