--- a/Pizza.css
+++ b/Pizza.css
@@ -114,44 +114,245 @@
     margin-left: 24px;
   }
 } .u-section-2 {
-  background-image: url("images/6744657_3423594.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("images/6744657_3423594.jpg");
   background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 703px;
+  min-height: 2000px;
 }
 
-.u-section-2 .u-btn-1 {
-  font-weight: 700;
-  font-size: 0.875rem;
-  letter-spacing: 0px;
-  text-transform: uppercase;
-  margin: 147px auto 60px;
-  padding: 22px 25px 22px 24px;
+.u-section-2 .u-group-1 {
+  width: 680px;
+  min-height: 140px;
+  height: auto;
+  margin: 7px auto 0;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.u-section-2 .u-text-1 {
+  background-image: none;
+  font-size: 3rem;
+  width: 403px;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-list-1 {
+  margin-top: 43px;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
+  min-height: 2804px;
+  grid-gap: 10px 10px;
+}
+
+.u-section-2 .u-list-item-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 0 10px;
+}
+
+.u-section-2 .u-text-2 {
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  font-size: 1.5rem;
+  letter-spacing: -2px;
+  font-family: "Open Sans", sans-serif;
+  margin: 55px auto 0 21px;
+}
+
+.u-section-2 .u-list-item-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 0 10px 30px;
+}
+
+.u-section-2 .u-text-3 {
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  font-size: 1.5rem;
+  letter-spacing: -2px;
+  font-family: "Open Sans", sans-serif;
+  margin: 55px auto 0 21px;
+}
+
+.u-section-2 .u-list-item-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 0 10px;
+}
+
+.u-section-2 .u-text-4 {
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  font-size: 1.5rem;
+  letter-spacing: -2px;
+  font-family: "Open Sans", sans-serif;
+  margin: 55px auto 0 21px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 580px;
+    min-height: 1649px;
+  }
+
+  .u-section-2 .u-group-1 {
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
+    min-height: 585px;
+  }
+
+  .u-section-2 .u-text-2 {
+    width: auto;
+    margin-top: 46px;
+    margin-left: 20px;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: auto;
+    margin-top: 59px;
+    margin-left: 20px;
+  }
+
+  .u-section-2 .u-text-4 {
+    width: auto;
+    margin-top: 59px;
+    margin-left: 20px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 444px;
+    min-height: 1263px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(2, calc(50% - 5px));
+    min-height: 1364px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 346px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 333px;
+    min-height: 947px;
+  }
+
+  .u-section-2 .u-group-1 {
+    width: 540px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: 100%;
+    min-height: 1970px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 24px;
+    font-size: 1rem;
+  }
+
+  .u-section-2 .u-text-3 {
+    font-size: 1rem;
+    margin-top: 65px;
+  }
+
+  .u-section-2 .u-text-4 {
+    font-size: 1rem;
+    margin-top: 65px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 210px;
+    min-height: 1900px;
+  }
+
+  .u-section-2 .u-group-1 {
+    min-height: 145px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-right: 31px;
+    margin-left: 48px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: 67px;
+    margin-bottom: 34px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 1594px;
+    grid-gap: 36px 36px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.125rem;
+    letter-spacing: 0px;
+    margin-top: -32px;
+    margin-left: 26px;
+    margin-right: 26px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    font-size: 1.125rem;
+    letter-spacing: 0px;
+    margin-top: -32px;
+    margin-left: 26px;
+    margin-right: 26px;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-2 .u-text-4 {
+    font-size: 1.125rem;
+    letter-spacing: 0px;
+    margin-top: -32px;
+    margin-left: 26px;
+    margin-right: 26px;
   }
 } .u-section-3 {
   background-image: url("images/67434657_3423594.jpg");
@@ -159,91 +360,111 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 772px;
+  min-height: 1159px;
 }
 
 .u-section-3 .u-group-1 {
-  width: 631px;
-  min-height: 628px;
+  width: 794px;
+  min-height: 989px;
   height: auto;
   margin: 110px auto 60px 0;
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 30px;
+  padding: 0;
 }
 
 .u-section-3 .u-text-1 {
   font-family: "Bebas Neue";
   font-size: 6rem;
   font-weight: 700;
-  margin: 31px 197px 0 0;
+  margin: 15px 0 0 30px;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 2.25rem;
-  margin: 20px 7px 0 87px;
+  margin: 20px 124px 0 30px;
 }
 
 .u-section-3 .u-text-3 {
+  margin: 15px 124px 0 30px;
+}
+
+.u-section-3 .u-text-4 {
+  margin: 15px 17px 0 30px;
+}
+
+.u-section-3 .u-text-5 {
   font-size: 2.25rem;
-  margin: 60px 0 0 94px;
+  margin: 60px 124px 0 30px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 662px;
+    min-height: 956px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 0;
     height: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 497px;
+    min-height: 732px;
   }
 
   .u-section-3 .u-group-1 {
-    min-height: 457px;
-    margin-bottom: 40px;
+    width: 720px;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 4.5rem;
-    width: auto;
-    margin-right: 0;
+    margin-left: 0;
   }
 
   .u-section-3 .u-text-2 {
     font-size: 1.875rem;
+    margin-right: 80px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 80px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-right: 80px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 400px;
+    min-height: 549px;
   }
 
   .u-section-3 .u-group-1 {
     width: 540px;
   }
 
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-3 .u-text-2 {
     margin-right: 0;
-    margin-left: 43px;
   }
 
   .u-section-3 .u-text-3 {
-    margin-left: 43px;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-5 {
     font-size: 1rem;
+    margin-right: 0;
   }
 }
 
@@ -253,33 +474,24 @@
   }
 
   .u-section-3 .u-sheet-1 {
-    min-height: 569px;
+    min-height: 1099px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 40px;
-    margin-bottom: 9px;
-    min-height: 520px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-bottom: 0;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 3.75rem;
+    width: auto;
   }
 
   .u-section-3 .u-text-2 {
     font-size: 1.5rem;
-    width: auto;
-    margin-right: 20px;
-    margin-left: 11px;
   }
 
-  .u-section-3 .u-text-3 {
-    width: auto;
-    margin-top: 29px;
-    margin-left: 16px;
-    margin-right: 16px;
+  .u-section-3 .u-text-5 {
+    font-size: 1.125rem;
   }
 }
