--- a/Sallader.css
+++ b/Sallader.css
@@ -114,7 +114,7 @@
     margin-left: 24px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/6744657_3423594.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/6744657_3423594.jpg");
   background-position: 50% 50%;
 }
 
@@ -256,91 +256,111 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 772px;
+  min-height: 1159px;
 }
 
 .u-section-3 .u-group-1 {
-  width: 631px;
-  min-height: 628px;
+  width: 794px;
+  min-height: 989px;
   height: auto;
   margin: 110px auto 60px 0;
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 30px;
+  padding: 0;
 }
 
 .u-section-3 .u-text-1 {
   font-family: "Bebas Neue";
   font-size: 6rem;
   font-weight: 700;
-  margin: 31px 197px 0 0;
+  margin: 15px 0 0 30px;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 2.25rem;
-  margin: 20px 7px 0 87px;
+  margin: 20px 124px 0 30px;
 }
 
 .u-section-3 .u-text-3 {
+  margin: 15px 124px 0 30px;
+}
+
+.u-section-3 .u-text-4 {
+  margin: 15px 17px 0 30px;
+}
+
+.u-section-3 .u-text-5 {
   font-size: 2.25rem;
-  margin: 60px 0 0 94px;
+  margin: 60px 124px 0 30px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 662px;
+    min-height: 956px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 0;
     height: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 497px;
+    min-height: 732px;
   }
 
   .u-section-3 .u-group-1 {
-    min-height: 457px;
-    margin-bottom: 40px;
+    width: 720px;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 4.5rem;
-    width: auto;
-    margin-right: 0;
+    margin-left: 0;
   }
 
   .u-section-3 .u-text-2 {
     font-size: 1.875rem;
+    margin-right: 80px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 80px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-right: 80px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 400px;
+    min-height: 549px;
   }
 
   .u-section-3 .u-group-1 {
     width: 540px;
   }
 
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-3 .u-text-2 {
     margin-right: 0;
-    margin-left: 43px;
   }
 
   .u-section-3 .u-text-3 {
-    margin-left: 43px;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-5 {
     font-size: 1rem;
+    margin-right: 0;
   }
 }
 
@@ -350,33 +370,24 @@
   }
 
   .u-section-3 .u-sheet-1 {
-    min-height: 569px;
+    min-height: 1099px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 40px;
-    margin-bottom: 9px;
-    min-height: 520px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-bottom: 0;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 3.75rem;
+    width: auto;
   }
 
   .u-section-3 .u-text-2 {
     font-size: 1.5rem;
-    width: auto;
-    margin-right: 20px;
-    margin-left: 11px;
   }
 
-  .u-section-3 .u-text-3 {
-    width: auto;
-    margin-top: 29px;
-    margin-left: 16px;
-    margin-right: 16px;
+  .u-section-3 .u-text-5 {
+    font-size: 1.125rem;
   }
 }
