--- a/nicepage.css
+++ b/nicepage.css
@@ -41882,7 +41882,8 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
  .u-footer {
-  background-image: none;
+  background-image: url("images/6744657_3423594.jpg");
+  background-position: 50% 50%;
 }
 
 .u-footer .u-sheet-1 {
