--- a/style.css
+++ b/style.css
@@ -244,8 +244,8 @@ border-radius: 50px;
     margin: auto;
     text-align: center;
     padding-top: 5%;
-    padding-bottom: 5%;
-    border-radius: 1px;
+    padding-bottom: 10%%;
+    border-radius: 20px;
     font-size: larger;
     text-decoration: double;
     
