--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ border-radius: 50px;
     margin: auto;
     text-align: center;
     padding-top: 5%;
-    padding-bottom: 10%%;
+    padding-bottom: 10%;
     border-radius: 20px;
     font-size: larger;
     text-decoration: double;
