--- a/style.css
+++ b/style.css
@@ -238,8 +238,10 @@ border-radius: 50px;
 
 }
 .lunch{
-    background-color: #000000;
-    color: #fff;
+    background-image: url(images/Vit-vägg.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    color: black;
     width: 90%;
     margin: auto;
     text-align: center;
