--- a/style.css
+++ b/style.css
@@ -238,10 +238,8 @@ border-radius: 50px;
 
 }
 .lunch{
-    background-image: url(images/Vit-vägg.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    color: black;
+    background-color: black;
+    color: white;
     width: 90%;
     margin: auto;
     text-align: center;
